# npc-gen

./: LICENSE  Main  Main.hs  README.md  main.hs  npcGen.cabal
Pathfinder/: Abilities.hs  Character.hs  Class.hs  Misc.hs  Race.hs  Skill.hs
src/: :  Leibniz.hs  Main  Main.hs  TODO.md  Utils.hs
src/Generic/: Abilities.hs  Archetype.hs  Character.hs  Class.hs  Class.hs-boot  Feat.hs  Misc.hs  Race.hs  Race.hs-boot  Skill.hs
src/Pathfinder/: Abilities.hs  Archetype.hs  Archetype.hs-boot  Character.hi-boot  Character.hs  Class.hs  Feat.hs  Misc.hs  NewCharacter.hs  NewCharacter.hs-boot  Race.hi-boot  Race.hs  Race.hs-boot  Skill.hs
src/Pathfinder/Class/: Warrior.hs
